--- a/style.css
+++ b/style.css
@@ -25,7 +25,15 @@
 
     --box-shadow: 0 2rem 4rem var(--color-light);
 }
-
+/* ------------------------------ DARK THEME VARAIBLES -----------------*/
+.dark-theme-variable{
+    --color-background:#181a1e;
+    --color-white:#202528;
+    --color-dark:#edeffd;
+    --color-dark-variant:#a3bdcc;
+    --color-light:rgba(0,0,0,0.4);
+    --box-shadow: 0 2rem 3rem var(--color-light)
+}
 * {
     margin: 0;
     padding: 0;
@@ -557,7 +565,7 @@ main .recent-orders a{
     }
     aside{
         position: fixed;
-        left: 0;
+        left: -100%;
         background: var(--color-white);
         width: 18rem;
         z-index: 3;
@@ -565,6 +573,13 @@ main .recent-orders a{
         height: 100vh;
         padding-right: var(--card-padding);
         display: none;
+        animation: showMenu 400ms ease forwards;
+    }
+
+    @keyframes showMenu {
+        to {
+            left: 0;
+        }
     }
     aside .logo{
         margin-left:1rem;
